# FlexiML_py

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml  requirements.txt
.github/workflows/: discord_notifier.yml  fleximl_py_tests.yml
