[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Elesdes"]
description = "Python bindings for FlexiML"
license = "MIT"
repository = "https://github.com/Elesdes/FlexiML_py"

[workspace.dependencies]
pyo3 = { version = "0.19.2", features = [
    "extension-module",
    "auto-initialize",
] }

[profile.release]
opt-level = 3
lto = true

[workspace.metadata.maturin]
name = "fleximl_py"
